Deployments/kubenetes/k8s-manifests/deploy-celery-scheduler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-scheduler
  labels:
    name: celery-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      service: celery-scheduler
  template:
    metadata:
      labels:
        service: celery-scheduler
    spec:
      containers:
        - name: webapp
          image: mpsproject/webapp:latest
          imagePullPolicy: IfNotPresent
          command: ["./launch_beat.sh"]
          resources:
            requests:
              cpu: "0.1"
          volumeMounts:
            - mountPath: /home/mpsproject/app/instance
              name: mount-instance
            - mountPath: /home/mpsproject/logs
              name: mount-logs
            - mountPath: /home/mpsproject/profiling
              name: mount-profiling
      volumes:
        - name: mount-instance
          persistentVolumeClaim:
            claimName: pvc-instance
        - name: mount-logs
          persistentVolumeClaim:
            claimName: pvc-logs
        - name: mount-profiling
          persistentVolumeClaim:
            claimName: pvc-profiling
      restartPolicy: Always
