Deployments/kubenetes/k8s-manifests/deploy-mariadb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mariadb
  template:
    metadata:
      labels:
        service: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "0.2"
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mount-mariadb-data
            - mountPath: /etc/mysql
              name: mount-mariadb-conf
      volumes:
        - name: mount-mariadb-data
          persistentVolumeClaim:
            claimName: pvc-mariadb-data
        - name: mount-mariadb-conf
          configMap:
            name: configmap-mariadb
            items:
              - key: my.cnf
                path: my.cnf
      restartPolicy: Always
