Deployments/kubenetes/k8s-manifests/deploy-priority-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: priority-worker
  labels:
    app.kubernetes.io/name: priority-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: priority-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: priority-worker
    spec:
      containers:
        - name: webapp
          image: mpsproject/webapp:latest
          imagePullPolicy: IfNotPresent
          command: ["./launch_celery.sh"]
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: "0.5"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 500
          volumeMounts:
            - mountPath: /home/mpsproject/assets
              name: mount-assets
            - mountPath: /home/mpsproject/backups
              name: mount-backups
            - mountPath: /home/mpsproject/app/instance
              name: mount-instance
            - mountPath: /home/mpsproject/logs
              name: mount-logs
            - mountPath: /home/mpsproject/profiling
              name: mount-profiling
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: mount-assets
          persistentVolumeClaim:
            claimName: pvc-assets
        - name: mount-backups
          persistentVolumeClaim:
            claimName: pvc-backups
        - name: mount-instance
          persistentVolumeClaim:
            claimName: pvc-instance
        - name: mount-logs
          persistentVolumeClaim:
            claimName: pvc-logs
        - name: mount-profiling
          persistentVolumeClaim:
            claimName: pvc-profiling
      restartPolicy: Always
