Deployments/kubenetes/k8s-manifests/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    service: webapp
spec:
  selector:
    service: webapp
  type: ClusterIP
  ports:
    - port: 5000
