Deployments/kubenetes/k8s-manifests/service-mariadb.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    service: mariadb
spec:
  selector:
    service: mariadb
  type: ClusterIP
  ports:
    - port: 3306
