Deployments/kubenetes/k8s-manifests/service-mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    service: mongodb
spec:
  selector:
    service: mongodb
  type: ClusterIP
  ports:
    - port: 27017
