Deployments/kubenetes/k8s-manifests/service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
spec:
  selector:
    app.kubernetes.io/name: redis
  type: ClusterIP
  ports:
    - port: 6379
