Deployments/kubenetes/k8s-manifests/ingress-default.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /flower
            pathType: Prefix
            backend:
              service:
                name: celery-dashboard
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 5000
